--- a/MartyCarCare/app/src/main/res/layout/fragment_car_details_form.xml
+++ b/MartyCarCare/app/src/main/res/layout/fragment_car_details_form.xml
@@ -5,53 +5,53 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/makeInputLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/makeLabel"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Car Make"
         android:layout_marginTop="32dp"
-        android:hint="Car Make"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/makeInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/modelInputLayout"
+    <Spinner
+        android:id="@+id/makeSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/makeLabel" />
+
+    <TextView
+        android:id="@+id/modelLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Car Model"
         android:layout_marginTop="16dp"
-        android:hint="Car Model"
-        app:layout_constraintTop_toBottomOf="@id/makeInputLayout">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/makeSpinner" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/modelInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/yearInputLayout"
+    <Spinner
+        android:id="@+id/modelSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/modelLabel" />
+
+    <TextView
+        android:id="@+id/yearLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Car Year"
         android:layout_marginTop="16dp"
-        android:hint="Car Year"
-        app:layout_constraintTop_toBottomOf="@id/modelInputLayout">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/modelSpinner" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/yearInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+    <Spinner
+        android:id="@+id/yearSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/yearLabel" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/confirmButton"
@@ -59,6 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Confirm"
-        app:layout_constraintTop_toBottomOf="@id/yearInputLayout" />
+        app:layout_constraintTop_toBottomOf="@id/yearSpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout> 
