--- a/app/src/main/res/layout/fragment_guides.xml
+++ b/app/src/main/res/layout/fragment_guides.xml
@@ -1,143 +1,161 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.guides.GuidesFragment">
+    android:paddingBottom="50dp">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="91dp"
-        android:layout_height="87dp"
-        android:layout_marginStart="8dp"
-        android:text="Tyre Change Guide"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="91dp"
-        android:layout_height="87dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="360dp"
-        android:text="Oil Change Guide"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="129dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="152dp"
-        android:text="Download PDF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="129dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="152dp"
-        android:text="Download PDF"
-        app:layout_constraintBottom_toTopOf="@+id/oilGuideThumbnail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintVertical_bias="0.476" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="129dp"
-        android:layout_height="58dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="12dp"
-        android:text="View PDF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="129dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="12dp"
-        android:text="View PDF"
-        app:layout_constraintBottom_toTopOf="@+id/oilGuideThumbnail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintVertical_bias="0.476" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Changing Tyre Walkthrough Video"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:gravity="center_horizontal"
+        android:spacing="24dp">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Oil Change Walkthrough Video"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.081"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        <!-- Tyre Guide Card -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/widget_background"
+            android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/tyreGuideThumbnail"
-        android:layout_width="370dp"
-        android:layout_height="207dp"
-        android:layout_margin="16dp"
-        android:layout_marginTop="4dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/tyre_thumbnail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:src="@drawable/play_arrow_1"
-        android:tint="#FFF6F6"
-        app:layout_constraintBottom_toBottomOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintEnd_toEndOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintTop_toTopOf="@+id/tyreGuideThumbnail"
-        app:layout_constraintVertical_bias="0.442" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tyre Change Guide"
+                    android:textSize="24sp"
+                    android:textColor="#FFFFFF"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_horizontal" />
 
-    <ImageView
-        android:id="@+id/oilGuideThumbnail"
-        android:layout_width="370dp"
-        android:layout_height="207dp"
-        android:layout_marginBottom="40dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/oil_thumbnail"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="12dp">
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:src="@drawable/play_arrow_1"
-        android:tint="#FDFCFC"
-        app:layout_constraintBottom_toBottomOf="@+id/oilGuideThumbnail"
-        app:layout_constraintEnd_toEndOf="@+id/oilGuideThumbnail"
-        app:layout_constraintStart_toStartOf="@+id/oilGuideThumbnail"
-        app:layout_constraintTop_toTopOf="@+id/oilGuideThumbnail" />
+                    <ImageView
+                        android:id="@+id/tyreGuideThumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/tyre_thumbnail"
+                        android:contentDescription="Tyre Thumbnail" />
 
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/play_arrow_1"
+                        android:tint="#FFFFFF" />
+                </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Changing Tyre Walkthrough Video"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginTop="8dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center">
+
+                    <Button
+                        android:id="@+id/downloadTyrePdfButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Download PDF" />
+
+                    <Button
+                        android:id="@+id/viewTyrePdfButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:text="View PDF" />
+                </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
+
+        <!-- Oil Guide Card -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/widget_background"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Oil Change Guide"
+                    android:textSize="24sp"
+                    android:textColor="#FFFFFF"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_horizontal" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="12dp">
+
+                    <ImageView
+                        android:id="@+id/oilGuideThumbnail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/oil_thumbnail"
+                        android:contentDescription="Oil Thumbnail" />
+
+                    <ImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/play_arrow_1"
+                        android:tint="#FFFFFF" />
+                </FrameLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Oil Change Walkthrough Video"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginTop="8dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center">
+
+                    <Button
+                        android:id="@+id/downloadOilPdfButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Download PDF" />
+
+                    <Button
+                        android:id="@+id/viewOilPdfButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:text="View PDF" />
+                </LinearLayout>
+            </LinearLayout>
+        </FrameLayout>
+
+    </LinearLayout>
+</ScrollView>
