--- a/app/src/main/res/layout/fragment_mechanic.xml
+++ b/app/src/main/res/layout/fragment_mechanic.xml
@@ -17,6 +17,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginTop="24dp"
             android:background="@drawable/circle_background"
             android:contentDescription="Toggle mechanics list"
             android:padding="10dp"
@@ -30,7 +31,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp"
             app:layout_constraintStart_toEndOf="@id/toggle_sidebar_button"
